Bug 65546 - Regression Sidebar: Properties deck -> Text panel keyboard navigation broken
Summary: Regression Sidebar: Properties deck -> Text panel keyboard navigation broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta2
Hardware: Other All
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0.1 target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-08 16:50 UTC by V Stuart Foote
Modified: 2013-08-15 16:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2013-06-08 16:50:50 UTC
--Regression--
Experimental feature, so not a blocker, but keyboard navigation in the Sidebar: Properties deck -> Text Panel. Keyboard <TAB> and cursor <LEFT>,<RIGHT> movement has become inoperable in the 4.1.0 beta2 builds. Unable to navigate with keyboard into Text panel toolbars.

Linux 64-bit RPM
Version: 4.1.0.0.beta2
Build ID: 33224f4f11a05cfad2249e812fcc2975fbb61f6

Windows 64-bit MSI
Version: 4.1.0.0.beta2
Build ID: 33224f4f11a05cfad2249e812fcc2975fbb61f6
Comment 1 V Stuart Foote 2013-06-08 17:11:50 UTC
Issue is affecting current builds of master/LODev 4.2.0.0alpha

Version: 4.2.0.0.alpha0+
Build ID: 67278daaf3cb664f8a89900382f0d7b19956b18
Comment 2 V Stuart Foote 2013-06-08 17:41:34 UTC
Keyboard navigation regression in the sidebar Text panel is not present upstream in the r1490908 build with r1480898.

Fedora 18 Linux, 64 bit
AOO400m2(Build:9701)  -  Rev. 1490898
2013-06-08_04:09:38 - Rev. 1490908
Comment 3 Caolán McNamara 2013-06-08 18:31:12 UTC
probably a result of the new layout stuff if that's the panel affected I think. Morely than likely something somewhere is doing a iteration through direct children and needs to be adapted to go down through layout widgets, nextLogicalChildOfParent, prevLogicalChildOfParent and firstLogicalChildOfParent can be used to simply convert existing old code. So its a matter of finding the right place to put that. (I'm not currently looking myself)
Comment 4 Caolán McNamara 2013-06-10 12:54:38 UTC
alight, I'll take it after all
Comment 5 Commit Notification 2013-06-10 13:11:07 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78beb05263129a1acd0fde6c03d828d813fd4a94&h=libreoffice-4-1

Resolves: fdo#65546 set Panel Layouts as DialogControl widgets


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-06-10 13:11:26 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4c07d983ab5562c914dad0d06cb24c61a7f3b41

Resolves: fdo#65546 set Panel Layouts as DialogControl widgets



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2013-06-10 13:14:38 UTC
that should do it
Comment 8 V Stuart Foote 2013-06-12 15:56:44 UTC
confirm it is fixed with current builds of both 4.1.0 beta2+ and master

Windows
Version: 4.1.0.0.beta2+
Build ID: c48c9d5c3a0b3518e1d847e8a5c5cb736287321
2013.06.12

Windows
Version: 4.2.0.0.alpha0+
Build ID: c36348f20c4fcb6ae1acb0fd06c19edfa9fb108
2013.06.11
Comment 9 V Stuart Foote 2013-08-13 20:59:44 UTC
Reopening

Its been a while since I've run through a TB build of master looking at keyboard navigation, but some regression in keyboard use of the Sidebar.

Loaded a current TB 6 master (debug build) on Windows 7 sp1 64bit.
Version: 4.2.0.0.alpha0+
Build ID: 3a34474db59067073d8c8f91b0173cab3a60850e
2013-08-12

Sidebar -- problem with sequence of keyboard <TAB> navigation in the Writer Properties Deck for the Paragraph and the Page "Content Panels", control element are not accessible with keyboard navigation.

Use <F6> key to position active focus to the Sidebar. Cursor <DOWN/UP> to move into and between Content Panel Title bars. Cursor <LEFT/RIGHT,DOWN/UP> to move within an active element.

Expected...
Should be able to <TAB>/<Shift><TAB> to move between all elements of each content panel. Should cycle through all elements and back to Content Panel title bar. <ESC> should take back to title bar.

Observed...

<TAB> between elements is erratic, or broken. Some out of sequence.

Writer -- Properties Tray

For "Paragraph" can only <TAB> to enter the Align menu. That is the only element accessible with keyboard navigation in the Paragraph content panel.

For "Page" can only <TAB> to enter the Size dropdown. That is the only element accessible with keyboard navigation int the Page content panel.

"Text" content panel correctly cycles through all elements, although the order places "character spacing" out of sequence--it should come before the "Superscript/subscript" element.

Calc -- Properties Tray

For "Text" the "Increase font/reduce font" is mapped but not visible so <TAB> lands there but no active element. The "Character spacing" and "super script/sub script" are visible (suppressed?) but can not be keyboard navigated onto.

For "Alignment" can only <TAB> to enter the Align menu. That is the only element accessible with keyboard navigation in the Alignment content panel.

For "Cell Appearance" can only <TAB> to enter the Cell background dropdown menu. That is the only element accessible with keyboard navigation in the Cell Appearance content panel.

For "Number Format" can <TAB> to enter the Category dropdown menu, and can <TAB> to the format picker (Numerical field, percent, currency, date, lable)--but there keyboard trapped. Must <ESC> to return to content panel title.


Impress -- Custom Animation Tray

For "Modify Effect" the Add button is not receiving focus of <TAB> into content panel.

Impress -- Slide Transition Tray

For "Apply to selected slides", no clear where focus lands with <TAB> from Title. Can not navigate and enter the list of transitions.
Comment 10 V Stuart Foote 2013-08-13 21:33:46 UTC
Sorry, adjust those earlier Sidebar references to "tray" to read "deck" instead. As in http://wiki.openoffice.org/wiki/File:SidebarNames.png
Comment 11 V Stuart Foote 2013-08-14 18:30:31 UTC
Pulled today's 4.1.1.1 RC1--keyboard navigation in Sidebar seems correct.

Version: 4.1.1.1
Build ID: a990db030b8125868501634ff662be1d89d0868

So these issues are regressions affecting current builds of master.
Comment 12 Commit Notification 2013-08-15 14:37:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b9d91c924a5b2f41c4cab5f1e86291b5997a681

Resolves: fdo#65546 whoops, lost vital mbKeyInputDisabled flag



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-08-15 16:20:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=101a8f0f0770b5789181812425ddfc8847f7206a

Related: fdo#65546 sort PACK_END into visual order for tabbing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2013-08-15 16:22:44 UTC
so, I prefer to get new bugs rather than reopen "fixed" ones, because the original problem was indeed fixed and there was an additional problem that needed to be fixed, and its easier to separate them if the bug reports are separated. Anyway, I think this is good now, but feel free to log a new bug and put me in CC if additional problems persist.