Resolves: fdo#65546 set Panel Layouts as DialogControl widgets

Change-Id: Iaf0e1dccf1af3bcec1057e42934d2931ccebfd32
(cherry picked from commit a4c07d983ab5562c914dad0d06cb24c61a7f3b41)